# api-python-bdeo-interview

./: README.md  pyproject.toml
.github/workflows/: workflow.yaml
app/: main.py
app/core/: __init__.py  model.py
app/events/: event_handlers.py
app/routers/: model.py
tests/: test_model.py
